--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>Hello!</h1>
+<h1>Computing Fundamental</h1>
 
-<p>This is my first website.</p>
+<p>Thanks Dennis!</p>
 
 </body>
 </html>
