--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,86 @@
 <!DOCTYPE html>
-<html>
-<body>
-
-<h1>Computing Fundamental</h1>
-
-<p>Thanks Dennis!</p>
-
-</body>
+<html lang="eng">
+  <head>
+    <title>Hello</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        document.querySelector(".link-button").onclick = function() {
+          alert("Proceed!");
+        };
+      });
+    </script>
+  </head>
+  <body>
+    <section class="top-banner">
+      <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1><span class="red-highlight">Stray</span> World!</h1>
+        <h3>Meo meo meo meo meo meo</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui,
+          repellat quisquam! Cumque ratione dolorem laudantium sequi, dolor eum.
+          Corporis totam perspiciatis illo recusandae qui beatae vero facilis
+          architecto incidunt facere?
+        </p>
+        <a
+          class="link-button"
+          target="_blank"
+          ;
+          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          >HIRE ME</a
+        >
+      </div>
+      <div class="half-width">
+        <img
+          src="https://4kwallpapers.com/images/wallpapers/stray-stray-cat-pc-games-playstation-4-playstation-5-2022-2560x1440-8497.jpg"
+          alt=""
+        />
+      </div>
+    </section>
+    <section class="dream-area">
+      <div class="half-width">
+        <img src="https://wallpaperaccess.com/full/8626914.jpg" alt="cat" />
+      </div>
+      <div class="half-width">
+        <h1>Dream Big</h1>
+        <h3>Meo meo meo meo meo</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+          nesciunt inventore omnis cupiditate, sunt error libero tenetur et
+          impedit exercitationem sint magni laborum incidunt delectus iure
+          veritatis doloremque ducimus. Modi?
+        </p>
+        <a class="link-button" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">DOWNLOAD RESUME</a>
+      </div>
+    </section>
+    <section class="experience-area">
+      <div id="full-stack" class="half-width single-experience">
+        <h2>Full Stack Web Developer</h2>
+        <h3 class="red-highlight">2024 - Present | Pro Level Developer</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, consequatur pariatur soluta labore minima blanditiis ducimus ea, sapiente, hic vel expedita at. Neque, ipsam totam odit officiis accusamus amet alias!
+        </p>
+      </div>
+      <div id="baby-web" class="half-width single-experience">
+        <h2>Baby Web Developer</h2>
+        <h3 class="red-highlight">2022 - 2023 | Just starting out</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque,
+          consequatur pariatur soluta labore minima blanditiis ducimus ea,
+          sapiente, hic vel expedita at. Neque, ipsam totam odit officiis
+          accusamus amet alias!
+        </p>
+      </div>
+    </section>
+    <footer>
+      <p>No rights reserverd.</p>
+    </footer>
+  </body>
 </html>
